# alphastream

./: .gitignore  .travis.yml  CMakeLists.txt  readme.md
astream/: .gitignore  CMakeLists - Copie.txt  CMakeLists.txt  README.md  astream.conf  astream.vcxproj  astream.vcxproj.filters  makefile  packages.config
astream/sources/: astream.cpp  astream_ErrorCode.h  stdafx.cpp  stdafx.h
libastream/: CMakeLists.txt  libastream.vcxproj  libastream.vcxproj.filters  packages.config
libastream/sources/: HttpClient.cpp  HttpClient.h  SpoolerDefs.h  astream.cpp  astream.h  json_helpers.cpp  json_helpers.h
